// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoneyboxCard should match snapshot - goal not reached 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
      },
      Object {
        "flexDirection": "column",
      },
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "shadowColor": "#161966",
          "shadowOffset": Object {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 16,
        },
        Array [
          Object {
            "alignItems": "stretch",
            "padding": 20,
          },
          Object {
            "marginBottom": 10,
          },
        ],
      ],
    ]
  }
  testID="moneybox-card-test-id"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "marginRight": 10,
        }
      }
    >
      <SvgMock
        color="#4C4C60"
        height={27}
        testID="piggy-bank-icon-test-id"
        width={27}
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#4C4C60",
            "fontFamily": "MulishRegular",
            "fontSize": 17,
            "lineHeight": 27.2,
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
      testID="moneybox-goal-title-test-id"
    >
      Test
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "flexDirection": "row",
          },
          Object {
            "marginLeft": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "flexDirection": "row",
            },
            Array [
              Object {
                "alignItems": "baseline",
              },
              undefined,
            ],
          ]
        }
        testID="moneybox-goal-test-id"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1B1D4D",
              },
              Object {
                "alignSelf": "flex-start",
                "fontFamily": "MulishRegular",
                "fontSize": 22,
                "lineHeight": 22.1,
              },
            ]
          }
        >
          5000.
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#1B1D4D",
              },
              Object {
                "fontFamily": "MulishRegular",
                "fontSize": 17,
                "lineHeight": 22.1,
              },
            ]
          }
        >
          00
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
              "lineHeight": 22.1,
            },
            Object {
              "fontFamily": "MulishBold",
              "marginLeft": 5,
            },
          ]
        }
        testID="moneybox-goal-currency-test-id"
      >
        USD
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
    testID="moneybox-progress-bar-test-id"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "height": 5,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#3EB290",
            "width": "20%",
          },
        ]
      }
      testID="progress-line-moneybox-progress-bar-test-id"
    />
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "height": 5,
          },
          Object {
            "backgroundColor": "#4C4C60",
            "opacity": 0.2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        Object {
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "flexDirection": "row",
          },
          Array [
            Object {
              "alignItems": "baseline",
            },
            Object {
              "marginRight": 5,
            },
          ],
        ]
      }
      testID="moneybox-saved-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "color": "#4C4C60",
              "fontSize": 15,
            },
          ]
        }
      >
        1000.
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        00
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#4C4C60",
            "fontFamily": "MulishRegular",
            "fontSize": 17,
            "lineHeight": 27.2,
          },
          Array [
            Object {
              "color": "#4C4C60",
              "fontSize": 12,
            },
            Object {
              "top": 1,
            },
          ],
        ]
      }
      testID="moneybox-saved-currency-test-id"
    >
      USD
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          false,
          Object {
            "alignItems": "center",
            "borderRadius": 10,
            "height": 55,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#3EB290",
            "borderWidth": 0,
            "height": 40,
          },
          Object {
            "backgroundColor": "#55ACEE",
            "flex": 1,
            "marginRight": 5,
          },
        ]
      }
      testID="moneybox-top-up-btn-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
            },
            Object {
              "fontSize": 15,
            },
          ]
        }
      >
        Top - Up
      </Text>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          false,
          Object {
            "alignItems": "center",
            "borderRadius": 10,
            "height": 55,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#3EB290",
            "borderWidth": 0,
            "height": 40,
          },
          Object {
            "flex": 1,
            "marginLeft": 5,
          },
        ]
      }
      testID="moneybox-withdrawal-btn-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
            },
            Object {
              "fontSize": 15,
            },
          ]
        }
      >
        Withdrawal
      </Text>
    </View>
  </View>
</View>
`;

exports[`MoneyboxCard should match snapshot - goal reached 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
      },
      Object {
        "flexDirection": "column",
      },
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "shadowColor": "#161966",
          "shadowOffset": Object {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 16,
        },
        Array [
          Object {
            "alignItems": "stretch",
            "padding": 20,
          },
          Object {
            "marginBottom": 10,
          },
        ],
      ],
    ]
  }
  testID="moneybox-card-test-id"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "marginRight": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3EB290",
            "borderRadius": 50,
            "height": 27,
            "justifyContent": "center",
            "width": 27,
          }
        }
      >
        <SvgMock
          color="#FFFFFF"
          height={14}
          testID="check-icon-test-id"
          width={14}
        />
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#4C4C60",
            "fontFamily": "MulishRegular",
            "fontSize": 17,
            "lineHeight": 27.2,
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
      testID="moneybox-goal-title-test-id"
    >
      Test
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "flexDirection": "row",
          },
          Object {
            "marginLeft": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "flexDirection": "row",
            },
            Array [
              Object {
                "alignItems": "baseline",
              },
              undefined,
            ],
          ]
        }
        testID="moneybox-goal-test-id"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1B1D4D",
              },
              Object {
                "alignSelf": "flex-start",
                "fontFamily": "MulishRegular",
                "fontSize": 22,
                "lineHeight": 22.1,
              },
            ]
          }
        >
          5000.
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#1B1D4D",
              },
              Object {
                "fontFamily": "MulishRegular",
                "fontSize": 17,
                "lineHeight": 22.1,
              },
            ]
          }
        >
          00
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
              "lineHeight": 22.1,
            },
            Object {
              "fontFamily": "MulishBold",
              "marginLeft": 5,
            },
          ]
        }
        testID="moneybox-goal-currency-test-id"
      >
        USD
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
    testID="moneybox-progress-bar-test-id"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "height": 5,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "backgroundColor": "#3EB290",
            "width": "100%",
          },
        ]
      }
      testID="progress-line-moneybox-progress-bar-test-id"
    />
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "height": 5,
          },
          Object {
            "backgroundColor": "#4C4C60",
            "opacity": 0.2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        Object {
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "flexDirection": "row",
          },
          Array [
            Object {
              "alignItems": "baseline",
            },
            Object {
              "marginRight": 5,
            },
          ],
        ]
      }
      testID="moneybox-saved-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "color": "#4C4C60",
              "fontSize": 15,
            },
          ]
        }
      >
        5000.
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#1B1D4D",
            },
            Object {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        00
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#4C4C60",
            "fontFamily": "MulishRegular",
            "fontSize": 17,
            "lineHeight": 27.2,
          },
          Array [
            Object {
              "color": "#4C4C60",
              "fontSize": 12,
            },
            Object {
              "top": 1,
            },
          ],
        ]
      }
      testID="moneybox-saved-currency-test-id"
    >
      USD
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
        },
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          false,
          Object {
            "alignItems": "center",
            "borderRadius": 10,
            "height": 55,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#3EB290",
            "borderWidth": 0,
            "height": 40,
          },
          Object {
            "backgroundColor": "#FF8A71",
            "flex": 1,
            "marginRight": 5,
          },
        ]
      }
      testID="moneybox-extend-btn-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
            },
            Object {
              "fontSize": 15,
            },
          ]
        }
      >
        Extend
      </Text>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          false,
          Object {
            "alignItems": "center",
            "borderRadius": 10,
            "height": 55,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#3EB290",
            "borderWidth": 0,
            "height": 40,
          },
          Object {
            "flex": 1,
            "marginLeft": 5,
          },
        ]
      }
      testID="moneybox-withdrawal-btn-test-id"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "MulishSemiBold",
              "fontSize": 17,
            },
            Object {
              "fontSize": 15,
            },
          ]
        }
      >
        Withdrawal
      </Text>
    </View>
  </View>
</View>
`;
